// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecordRepo find Handle fulltext search result 1`] = `
{
  "ctx": {
    "requestId": "123465",
    "userId": "0",
  },
  "query": {
    "_source": [Function],
    "bindVars": {
      "value0": "fulltextSearchQuery",
      "value1": "test_lib",
    },
    "query": "FOR r IN (@value0)
SORT r.core_index.score DESC, r.created_at DESC
FILTER r.active == true
RETURN MERGE(r, {library: @value1})",
  },
  "withTotalCount": true,
}
`;

exports[`RecordRepo find Should find records 1`] = `
{
  "ctx": {
    "requestId": "123465",
    "userId": "0",
  },
  "query": {
    "_source": [Function],
    "bindVars": {
      "@value0": "test_lib",
      "value1": "test_lib",
    },
    "query": "FOR r IN (@@value0)
SORT r.created_at DESC
FILTER r.active == true
RETURN MERGE(r, {library: @value1})",
  },
  "withTotalCount": true,
}
`;

exports[`RecordRepo find with filters Should filter records - simple 1`] = `
{
  "ctx": {
    "requestId": "123465",
    "userId": "0",
  },
  "query": {
    "_source": [Function],
    "bindVars": {
      "@value0": "test_lib",
      "value1": "test_lib",
    },
    "query": "FOR r IN (@@value0)

FILTER (
( IS_ARRAY([object Object]) ? LENGTH([object Object][* FILTER <Condition>]) : <Condition> )
AND
( IS_ARRAY([object Object]) ? LENGTH([object Object][* FILTER <Condition>]) : <Condition> )
)
SORT r.created_at DESC
FILTER r.active == true
RETURN MERGE(r, {library: @value1})",
  },
  "withTotalCount": true,
}
`;
